@@ -98,13 +98,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   * mod_rewrite: Add %{CONN_REMOTE_ADDR} to mod_rewrite PR56094
-     trunk patch: https://svn.apache.org/r1563418
-     2.4.x patch: trunk works
-     +1: covener, jim, mrumph
-     mrumph: Verified the change against comment 1 in PR 55886.
-             Also, verified the source change against log_remote_address()
-             in modules/loggers/mod_log_config.c in both trunk and 2.4.x.
 
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
